# euchre

./: .env.local  .env.prod  .env.test  .gitignore  README.md  docker-compose.yaml
.github/workflows/: codeql.yml  docker-images.yml
db/: init.sql
euchre-ai/: Dockerfile  README.md  ai.py  client.py  requirements.txt
euchre-api/: .gitignore  Dockerfile  README.md  ai.py  ai_client.py  euchre.py  game.py  names.txt  nouns.json  requirements.txt  requirements_dev.txt  routes.py  sockets.py
euchre-api/api/: __init__.py  cors.py  postgres_storage.py  redis_storage.py  routes.py  sockets.py  utils.py
euchre-api/resources/: animals.txt
euchre-frontend/: .env  Dockerfile  README.md  index.html  package-lock.json  package.json
euchre-frontend/design/: README.md  gameplay.html  gameplay_style.css
euchre-frontend/src/: App.svelte  CallView.svelte  CallingOpen.svelte  CallingPickup.svelte  Card.svelte  GameBoard.svelte  GameContainer.svelte  Hand.svelte  Lobby.svelte  PlayedCards.svelte  Scoreboard.svelte  TopBar.svelte  Trick.svelte  app.css  store.js
euchre-frontend/src/lib/: Card.svelte  utils.js
euchrelib/: README.md  pyproject.toml  requirements.txt
euchrelib/src/euchrelib/: deck.py  game.py
nginx/: README.md  euchre.kutz.dev
redis/: Dockerfile  entrypoint.sh
