[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "euchrelib"
version = "0.0.1"
authors = [
  { name="Mike Kutzma", email="mike@kutz.dev" },
]
description = "A utility library for managing state of euchre games"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/mikekutzma/euchre/euchrelib"
"Bug Tracker" = "https://github.com/mikekutzma/euchre/euchrelib/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"euchrelib.data" = ["*.txt"]

[tool]
